<resources>
    <string name="app_name">CRM Food</string>
    <string name="no_internet">Отсутствует интернет-соединение</string>
    <string name="update_page">Попробуйте обновить страницу</string>
    <string name="tables_error">Невозможно получить список столов</string>
    <string name="title_tables">Столы</string>
    <string name="active_ordders_list">Лист активных заказов</string>
    <string name="active_ordders_list_">Лист активных заказов:</string>
    <string name="create_a_new_order">Сделать новый заказ</string>
    <string name="orders_number">Стол #1</string>
    <string name="orders_name">Блинный Брауни</string>
    <string name="add">Добавить</string>
    <string name="close_account">Закрыть счет</string>
    <string name="delete">Удалить</string>
    <string name="logout_title">Выйти из аккаунта</string>
    <string name="do_order_title">Сделать заказ</string>
    <string name="do_order_message">Вы уверены, что хотите сделать заказ?</string>
    <string name="logout_message">Вы уверены, что хотите выйти из аккаунта?</string>
    <string name="action_conf">Подтвердить</string>
    <string name="action_logout">Выйти</string>

    <string name="freezed">ЗАМОРОЖЕН</string>
    <string name="redy_t">ГОТОВО!</string>
    <string name="in_progress">В ПРОЦЕССЕ</string>
    <string name="title_menu">Меню блюд</string>
    <string name="breakfast">Завраки</string>
    <string name="title_bar">Меню бара</string>
    <string name="drinks">Алкогольные напитки</string>
    <string name="orders_error">Невозможно получить список заказов</string>
    <string name="basket_orders_error">Невозможно получить список, попробуйте обновить страницу</string>
    <string name="meal_name">Боул с черникой и гранолой</string>
    <string name="items_weight">200гр</string>
    <string name="items_price">60,00 c</string>
    <string name="pod_menu_error">Ошибка! Попробуйте перезагрузить страницу</string>
    <string name="login_error">Ошибка входа</string>
    <string name="shr_error_password">Неверный номер телефона или пароль, попробуйте снова</string>
    <string name="confirm">Подтвердить</string>
    <string name="add_meal">Добавить</string>
    <string name="next">Далее</string>
    <string name="log_out">Принять</string>
    <string name="cancel_order">Отменить</string>
    <string name="cancel_close_cheque">Отмена</string>
    <string name="close_cheque_question">Вы уверены, что хотите закрыть счет?</string>
    <string name="accept_close_cheque">Закрыть счет</string>
    <string name="close_cheque_title">Закрыть счет</string>
    <string name="no_orders">Нет доступных заказов</string>
    <string name="update_orders">Попробуйте обновить страницу</string>
    <string name="categories_error">Невозможно загрузить список категорий</string>
    <string name="meals_error">Невозможно получить список блюд</string>
    <string name="cant_launch">Невозможно вывести список</string>
    <string name="no_tables">Нет доступных столов</string>
</resources>
