<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="24dp"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/poduct_name_basket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meal_name"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        android:textSize="17sp"
        android:textStyle="normal"
        android:textColor="@color/colorBlack">
    </TextView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:layout_marginTop="14dp">

        <androidx.cardview.widget.CardView
            android:layout_width="72dp"
            android:layout_height="37dp"
            app:cardBackgroundColor="@color/colorLightGray">

            <TextView
                android:id="@+id/item_price_basket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingStart="14dp"
                android:textColor="@color/colorBlack"
                android:text="@string/items_price"
                tools:ignore="RtlSymmetry" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/decrease_menu_basket"
            android:layout_width="44dp"
            android:layout_height="37dp"
            app:cardBackgroundColor="@color/colorBusy">

            <TextView
                android:layout_width="37dp"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="25sp"
                android:layout_marginStart="18dp"
                android:textColor="@color/colorBlack"/>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="44dp"
            android:layout_height="37dp"
            app:cardBackgroundColor="@color/colorLightGray">

            <TextView
                android:id="@+id/counter_menu_basket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="9dp"
                android:paddingStart="17dp"
                android:textColor="@color/colorBlack"
                android:text="0"
                tools:ignore="RtlSymmetry" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/increase_menu_basket"
            android:layout_width="44dp"
            android:layout_height="37dp"
            app:cardBackgroundColor="@color/colorBusy">

            <TextView
                android:layout_width="37dp"
                android:layout_height="wrap_content"
                android:text="+"
                android:textSize="25sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorBlack"/>

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/delete_button_basket"
            android:layout_width="100dp"
            android:layout_height="37dp"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="20dp"
            android:textSize="12sp"
            android:background="@drawable/delete_button"
            android:text="@string/delete"
            tools:ignore="MissingConstraints">

        </Button>

    </LinearLayout>


</LinearLayout>