<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="13dp"
    android:paddingEnd="13dp"
    android:paddingBottom="13dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/orders_number_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/orders_number"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="14sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/total_price_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:layout_marginStart="180dp"
            tools:text="4 567 с." />

        <ImageView
            android:id="@+id/arrow_close"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_arrow"
            />

        <ImageView
            android:id="@+id/arrow_open"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_arrow_down"
            android:visibility="gone"
            />


    </LinearLayout>

    <include
        android:id="@+id/include_list_of_order_items"
        layout="@layout/list_of_order_items_re_v"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orders_number_textView"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/add_button"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:textSize="12sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/add_button"
        android:text="@string/add"
        tools:ignore="MissingConstraints">

    </Button>

    <Button
        android:id="@+id/close_account_button"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:text="@string/close_account"
        android:background="@drawable/close_c_button"
        android:layout_marginStart="8dp"
        tools:ignore="MissingConstraints">

    </Button>

<!--        <Button-->
<!--            android:id="@+id/close_account_button"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:textColor="@color/colorWhite"-->
<!--            android:textSize="12sp"-->
<!--            android:text="@string/close_account"-->
<!--            android:background="@drawable/close_c_button"-->
<!--            android:layout_marginStart="215dp"-->
<!--            tools:ignore="MissingConstraints">-->

<!--        </Button>-->


    </LinearLayout>



</LinearLayout>