<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/go_back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="13dp"
                    android:layout_margin="20dp"
                    app:srcCompat="@drawable/ic_go_back">

                </ImageView>

            </LinearLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_bar_sub_menu"
                android:layout_width="270dp"
                android:layout_height="?attr/actionBarSize"
                android:fontFamily="Avenir Next"
                app:title="Завтраки"
                app:titleTextColor="@color/colorBlack">

            </androidx.appcompat.widget.Toolbar>


<!--            <LinearLayout-->
<!--                android:id="@+id/basket_sub"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                >-->

<!--                <ImageView-->
<!--                    android:layout_width="19dp"-->
<!--                    android:layout_height="16dp"-->
<!--                    android:layout_marginTop="20dp"-->
<!--                    app:srcCompat="@drawable/ic_submit">-->

<!--                </ImageView>-->

<!--            </LinearLayout>-->


        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="570dp"
        android:padding="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sub_menu_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <Button
        android:layout_marginTop="8dp"
        android:layout_marginStart="130dp"
        android:id="@+id/next_button"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:text="@string/next"
        android:background="@drawable/close_c_button">
    </Button>

    <Button
        android:layout_marginTop="8dp"
        android:layout_marginStart="130dp"
        android:id="@+id/go_to_the_basket_button"
        android:layout_width="100dp"
        android:layout_height="37dp"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        android:text="@string/next"
        android:background="@drawable/close_c_button"
        android:visibility="gone"
        >

    </Button>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/subMenu_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminateTint="@color/rippleColor"
        />

    <LinearLayout
        android:id="@+id/empty_view_subMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">
        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:srcCompat="@drawable/ic_empty" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/no_orders"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_orders"/>

    </LinearLayout>

</RelativeLayout>
